[project]
name = "comfyui-channel-luminance-keyer"
version = "1.0.0"
description = "Nuke-style Channel & Luminance Keyer node for ComfyUI with live in-node matte preview"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = ["torch", "numpy"]

[project.urls]
Repository = "https://github.com/your-handle/ComfyUI-ChannelKeyer"

[tool.comfy]
PublisherId = "your-handle"
DisplayName = "Channel & Luminance Keyer"
Icon = "🎯"
